--- a/yena.html
+++ b/yena.html
@@ -53,7 +53,23 @@
 </head>
 <body>
     <!-- 작업 진행하시고 브런치 따로 만들어서 저장해주세요! -->
-
-       
+    <div class="hotspot">
+        <div class="container">
+            <div class="main_tit">인기스팟</div>
+            <div class="hotplace_card_box d-flex">
+                <div><img src="./img/image/hotplace_1.jpg" alt="인기스팟이미지1"></div>
+                <div><img src="./img/image/hotplace_2.jpg" alt="인기스팟이미지2"></div>
+                <div>
+                    <img src="./img/image/hotplace_5.jpg" alt="인기스팟이미지5">
+                    <div class="hotplace_txt">
+                        <div class="sub_tit">소슬의 인기스팟을<br>안내해드립니다.</div>
+                        <div class="basic_txt">놓치면 아쉬운 점!</div>
+                    </div>
+                </div>
+                <div><img src="./img/image/hotplace_3.jpg" alt="인기스팟이미지3"></div>
+                <div><img src="./img/image/hotplace_4.jpg" alt="인기스팟이미지4"></div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
