--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
     <meta name="msapplication-TileImage" content="" size="270x270" />
 
     <!-- 텍스트 폰트 -->
-    <link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/static/woff2/SUIT.css" rel="stylesheet"/>
-    <link href="https://cdn.jsdelivr.net/gh/sun-typeface/SUIT@2/fonts/variable/woff2/SUIT-Variable.css" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Suit:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/fonts.css">
 
     <!-- font icon -->
