--- a/cha.html
+++ b/cha.html
@@ -11,25 +11,28 @@
         <p>소솔 유튜브 구독하고 1,000포인트 받아가세요!</p>
         <button>소솔 유튜브 바로가기</button>
     </header>
-
-    <main class="main">
-        <h1>가고 싶은 캠핑장소를 찾아보세요!</h1>
-        <div class="options">
-            <div class="option">
-                <img src="calendar-image.jpg" alt="캘린더">
-                <h2>언제 떠날까요?</h2>
-                <p>캘린더로 일정을 도와드리겠습니다.</p>
-                <button>날짜로 장소 찾기</button>
+    
+    <main class="mainbox">
+        <ul class="main">
+            <h1>가고 싶은 캠핑장소를 찾아보세요!</h1>
+            <div class="main-container">
+                <div class="wherewhen">
+                    <div class>
+                        <img src="./img/image/when.jpg" alt="캘린더">
+                    <h2>언제 떠날까요?</h2>
+                    <p>캘린더로 일정을 도와드리겠습니다.</p>
+                    <button>날짜로 장소 찾기</button>
+                    </div>
+                    
+                </div>
+                <div class="wherewhen">
+                    <img src="./img/image/where.jpg" alt="지도">
+                    <h2>어디로 떠날까요?</h2>
+                    <p>지도로 장소를 도와드리겠습니다.</p>
+                    <button>위치로 장소 찾기</button>
+                </div>
             </div>
-            <div class="option">
-                <img src="map-image.jpg" alt="지도">
-                <h2>어디로 떠날까요?</h2>
-                <p>지도로 장소를 도와드리겠습니다.</p>
-                <button>위치로 장소 찾기</button>
-            </div>
-        </div>
     </main>
-
     <footer class="footer">
         <p>[공지사항] 이벤트 내용을 입력하세요.</p>
         <p>
