--- a/yena.html
+++ b/yena.html
@@ -34,8 +34,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- 플러그인 -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
@@ -56,20 +56,45 @@
     <div class="hotspot">
         <div class="container">
             <div class="main_tit">인기스팟</div>
-            <div class="hotplace_card_box d-flex">
-                <div><img src="./img/image/hotplace_1.jpg" alt="인기스팟이미지1"></div>
-                <div><img src="./img/image/hotplace_2.jpg" alt="인기스팟이미지2"></div>
-                <div>
-                    <img src="./img/image/hotplace_5.jpg" alt="인기스팟이미지5">
-                    <div class="hotplace_txt">
-                        <div class="sub_tit">소슬의 인기스팟을<br>안내해드립니다.</div>
-                        <div class="basic_txt">놓치면 아쉬운 점!</div>
-                    </div>
+            <section class="swiper conSwiper1">
+                <div class="hotplace_card_box swiper-wrapper">
+                    <div class="swiper-slide"><img src="./img/image/hotplace_1.jpg" alt="인기스팟이미지1"></div>
+                    <div class="swiper-slide"><img src="./img/image/hotplace_2.jpg" alt="인기스팟이미지2"></div>
+                    <div class="swiper-slide"><img src="./img/image/hotplace_5.jpg" alt="인기스팟이미지5"></div>
+                    <div class="swiper-slide"><img src="./img/image/hotplace_3.jpg" alt="인기스팟이미지3"></div>
+                    <div class="swiper-slide"><img src="./img/image/hotplace_4.jpg" alt="인기스팟이미지4"></div>
+                    <div class="swiper-slide"><img src="./img/image/hotplace_3.jpg" alt="인기스팟이미지3"></div>
+                    <div class="swiper-slide"><img src="./img/image/hotplace_4.jpg" alt="인기스팟이미지4"></div>
                 </div>
-                <div><img src="./img/image/hotplace_3.jpg" alt="인기스팟이미지3"></div>
-                <div><img src="./img/image/hotplace_4.jpg" alt="인기스팟이미지4"></div>
-            </div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+            </section>
         </div>
     </div>
+
+    <div class="hotplace_txt">
+        <div class="sub_tit">소슬의 인기스팟을<br>안내해드립니다.</div>
+        <div class="basic_txt">놓치면 아쉬운 점!</div>
+    </div>
+    <script>
+        
+		var swiper = new Swiper(".conSwiper1", {
+            slidesPerView: 'auto',
+            centeredSlides: true,
+            resistanceRatio:0,
+            allowTouchMove: false,
+            loop: true,
+            autoplay: {
+                delay: 2000,
+                disableOnInteraction: false,
+            },
+            navigation: {
+                nextEl: '.swiper-button-next',
+                prevEl: '.swiper-button-prev',
+            },
+        });
+		
+    </script>
+
 </body>
 </html>
