--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
+    <!-- 제이쿼리 -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     <!-- 커스터마이징 -->
     <link rel="" type="" href="">
     <link rel="stylesheet" href="css/same.css">
