--- a/index.html
+++ b/index.html
@@ -279,31 +279,31 @@
             <section class="swiper youtuber">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <div class="video-container">
+                        <div class="youtube-container">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/WhIf5Rrxgek?si=Gdtv55oKyMMgl0f3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="basic_txt gray1">난로 바꾸는 맛에 장박합니다 </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="video-container">
+                        <div class="youtube-container">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/WhIf5Rrxgek?si=Gdtv55oKyMMgl0f3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="basic_txt gray1">난로 바꾸는 맛에 장박합니다 </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="video-container">
+                        <div class="youtube-container">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/WhIf5Rrxgek?si=Gdtv55oKyMMgl0f3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="basic_txt gray1">난로 바꾸는 맛에 장박합니다 </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="video-container">
+                        <div class="youtube-container">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/WhIf5Rrxgek?si=Gdtv55oKyMMgl0f3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="basic_txt gray1">난로 바꾸는 맛에 장박합니다 </div>
                     </div>
                     <div class="swiper-slide">
-                        <div class="video-container">
+                        <div class="youtube-container">
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/WhIf5Rrxgek?si=Gdtv55oKyMMgl0f3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                         </div>
                         <div class="basic_txt gray1">난로 바꾸는 맛에 장박합니다 </div>
