--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body> 
     <!-- 작업 진행하시고 브런치 따로 만들어서 저장해주세요! -->
     <header id="hd" class="d-flex">
-        <div class="container d-flex jcb aic">
+        <div class="container_full d-flex jcb aic">
             <h1 class="order-1"><a href=""><img src="./img/logo/logo.svg" alt=""></a></h1>
             <ul id="gnb" class="d-flex order-0 gap-3">
                 <li><a href="" class="text-nowrap">예약하기</a></li>
