차은단위변경

--- a/index.html
+++ b/index.html
@@ -365,16 +365,17 @@
         </div>
     </div>
    <!--// yena  -->
+
+
+<!-- cha -->
+<div id="cha">
    <div class="mdbanner">
-    <img src="./img/image/banner2.jpg" alt="banner2">
     <div class="mdb_box">
-        <p>소솔 유튜브 구독하고 1,000포인트 받아가세요!</p>
+        <p>소슬 유튜브 구독하고 1,000포인트 받아가세요!</p>
         <button>소솔 유튜브 바로가기</button>
     </div>
-
-</div>
-
- <div class="more">
+    </div>
+  <div class="more">
     <ul class="more_container">
         <h1>가고 싶은 캠핑장소를 찾아보세요!</h1>
         <div class="more_area">
@@ -512,7 +513,7 @@
       </div>
   </div>
  </footer>
-
+</div>
 
    <script>
     const swiper_youtuber = new Swiper(".youtuber", {
