퀵메뉴 추가

--- a/index.html
+++ b/index.html
@@ -52,26 +52,32 @@
 </head>
 <body> 
     <!-- 작업 진행하시고 브런치 따로 만들어서 저장해주세요! -->
+
+    <!-- eunjeong -->
     <header id="hd" class="d-flex">
         <div class="container_full d-flex jcb aic">
             <h1 class="order-1"><a href=""><img src="./img/logo/logo.svg" alt=""></a></h1>
-            <ul id="gnb" class="d-flex order-0 gap-3">
+            <button class="d-lg-none">햄버거</button>
+            <ul id="gnb" class="d-none d-lg-flex order-0 gap-3">
                 <li><a href="" class="text-nowrap">예약하기</a></li>
                 <li><a href="" class="text-nowrap">오직여기</a></li>
                 <li><a href="" class="text-nowrap">프로모션</a></li>
                 <li><a href="" class="text-nowrap">브랜드</a></li>
             </ul>
-            <ul class="util d-flex order-2 text-nowrap aic gap-5">
-                <li><a href="" class="text-nowrap"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="12" viewBox="0 0 21 12" fill="none">
-                    <path d="M19.5 11V6" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M7.23251 10.9999H10.047L5.77351 1L1.5 10.9999H4.31452L5.77351 7.5861L7.23251 10.9999Z" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M4.31592 11H7.23391" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M1.5 11V6" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M5.77405 1L7.42447 4.85502L8.79551 3.46322L10.1717 4.85502L11.5479 3.46322L12.9242 4.85502L14.2952 3.46322L15.6714 4.85502L16.4992 4.01994L15.2058 1H5.77405Z" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M14.2954 3.46313L12.9244 4.85493L11.5482 3.46313L10.1719 4.85493L8.79572 3.46313L7.42468 4.85493L10.0478 10.9999H19.4795L16.4994 4.01985L15.6716 4.85493L14.2954 3.46313Z" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M10.046 11V6" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    </svg>
-                    예약하기</a></li>
+            <ul class="util d-flex order-2 text-nowrap aic gap-lg-5 gap-2">
+                <li class="d-lg-none">돋보기</li>
+                <li>
+                    <a href="" class="text-nowrap">
+                         <svg xmlns="http://www.w3.org/2000/svg" width="21" height="12" viewBox="0 0 21 12" fill="none">
+                            <path d="M19.5 11V6" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
+                            <path d="M7.23251 10.9999H10.047L5.77351 1L1.5 10.9999H4.31452L5.77351 7.5861L7.23251 10.9999Z" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
+                            <path d="M4.31592 11H7.23391" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
+                            <path d="M1.5 11V6" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
+                            <path d="M5.77405 1L7.42447 4.85502L8.79551 3.46322L10.1717 4.85502L11.5479 3.46322L12.9242 4.85502L14.2952 3.46322L15.6714 4.85502L16.4992 4.01994L15.2058 1H5.77405Z" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
+                            <path d="M14.2954 3.46313L12.9244 4.85493L11.5482 3.46313L10.1719 4.85493L8.79572 3.46313L7.42468 4.85493L10.0478 10.9999H19.4795L16.4994 4.01985L15.6716 4.85493L14.2954 3.46313Z" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
+                            <path d="M10.046 11V6" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
+                        </svg>
+                    <span class="d-none d-lg-inline">예약하기</span></a></li>
                 <li><a href=""><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M16.9529 4.69562H4V16H16.9529V4.69562Z" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M4 8.08698H16.9529" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -79,7 +85,8 @@
                     <path d="M13.4199 3V5.82609" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                     <path d="M13.2458 10.5493L10.3019 13.3754L8.47086 11.806" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                     </svg>
-                    로그인</a></li>
+                    <span class="d-none d-lg-inline">로그인</span>
+                </a></li>
             </ul>
         </div>       
     </header>
@@ -139,13 +146,13 @@
             </button>
         </div>
 
-        <button class="close-btn">
-            <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox    ="0 0 22 22" fill="none" >
+        <div class="close-svg">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox    ="0 0 22 22" fill="none" >
                 <path d="M1 21L21 1M1 1L21 21" stroke="#3F422F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
                 
             </svg>
-        </button>
+        </div>
 
         <button class="search-btn d-flex jic aic">검색</button>
     </div> 
@@ -182,8 +189,8 @@
 
         <button class="quick-btn btn-top">
             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
-                <path d="M7 22L17.0186 12" stroke="#3F422F" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
-                <path d="M17.0186 12L27.0001 22" stroke="#3F422F" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
+                <path d="M7 22L17.0186 12" stroke="#fff" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
+                <path d="M17.0186 12L27.0001 22" stroke="#fff" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
             </svg>
             TOP</button>
     </div>     
