--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
    <!--// yena youtube -->
 
 
-    <!-- //cha mdbanner -->
+    <!-- cha mdbanner -->
     <div class="mdbanner">
         <div class="mdb_box">
             <p>소슬 유튜브 구독하고 1,000포인트 받아가세요!</p>
@@ -446,6 +446,9 @@
             </div>
         </ul>
  </div>
+ <!-- //cha mdbanner -->
+
+ <!-- cha notice -->
  <div class="notice">
     <ul class="notice_box">
         <li>[공지사항] <a href="">이벤트 내용을 입력하세요.</a></li>
@@ -456,6 +459,9 @@
         </li>
     </ul>
  </div>
+<!-- cha notice -->
+
+ <!-- cha footer -->
  <footer class="footer">
   <div class="ft_container">
       <div class="btm_info_box">
@@ -555,6 +561,7 @@
       </div>
   </div>
  </footer>
+ <!-- //cha footer -->
 </div>
 
 <script>
