--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
 
 </head>
 <body> 
-    <!-- 작업 진행하시고 브런치 따로 만들어서 저장해주세요! -->
 
-    <!-- eunjeong -->
+    <!-- eunjeong header -->
     <header id="hd" class="d-flex">
         <div class="container_full d-flex jcb aic">
             <h1 class="order-1"><a href=""><img src="./img/logo/logo.svg" alt=""></a></h1>
@@ -77,29 +76,6 @@
                 <li><a href="" class="text-nowrap">프로모션</a></li>
                 <li><a href="" class="text-nowrap">브랜드</a></li>
             </ul>
-            <ul class="util d-flex order-2 text-nowrap aic gap-5">
-                <li><a href="" class="text-nowrap"><svg xmlns="http://www.w3.org/2000/svg" width="21" height="12" viewBox="0 0 21 12" fill="none">
-                    <path d="M19.5 11V6" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M7.23251 10.9999H10.047L5.77351 1L1.5 10.9999H4.31452L5.77351 7.5861L7.23251 10.9999Z" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M4.31592 11H7.23391" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M1.5 11V6" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M5.77405 1L7.42447 4.85502L8.79551 3.46322L10.1717 4.85502L11.5479 3.46322L12.9242 4.85502L14.2952 3.46322L15.6714 4.85502L16.4992 4.01994L15.2058 1H5.77405Z" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M14.2954 3.46313L12.9244 4.85493L11.5482 3.46313L10.1719 4.85493L8.79572 3.46313L7.42468 4.85493L10.0478 10.9999H19.4795L16.4994 4.01985L15.6716 4.85493L14.2954 3.46313Z" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    <path d="M10.046 11V6" stroke="#3F422F" stroke-width="1.2" stroke-linejoin="round"/>
-                    </svg>
-                    예약하기</a></li>
-                <li>
-                    <a href="">
-                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M16.9529 4.69562H4V16H16.9529V4.69562Z" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M4 8.08698H16.9529" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M7.5314 3V5.82609" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M13.4199 3V5.82609" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-                            <path d="M13.2458 10.5493L10.3019 13.3754L8.47086 11.806" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
-                        </svg>
-                    로그인
-                    </a>
-                </li>
             <ul class="util d-flex order-2 text-nowrap aic gap-lg-5 gap-2">
                 <li class="d-lg-none">돋보기</li>
                 <li>
@@ -126,11 +102,14 @@
             </ul>
         </div>       
     </header>
+    <!--// eunjeong header -->
+
+    <!-- eunjeong video -->
     <div class="video-container">
         <div class="video-bg"> 
             <video autoplay muted loop>
-            <source src="./video/main_video.mp4" type="video/mp4">
-             Your browser does not support the video tag.
+                <source src="./video/main_video.mp4" type="video/mp4">
+                <!-- Your browser does not support the video tag. -->
             </video>
         </div>
         <div class="video-icon aic">
@@ -146,18 +125,14 @@
             </svg>
         </div>
     </div>
+    <!--// eunjeong video -->
 
-    </div>
-
-
+    <!-- eunjeong search -->
     <div class="search-box jcb aic">
         <svg xmlns="http://www.w3.org/2000/svg" width="1435" height="80" viewBox="0 0 1435 80" fill="none">
             <path d="M0 0H1435L1398.51 60.6284C1391.27 72.6491 1378.27 80 1364.24 80H70.7646C56.7343 80 43.7296 72.6491 36.494 60.6284L0 0Z" fill="white"/>
         </svg>
     </div>
-
-
-
     <div class="search-container d-flex aic"> 
         <div class="topwhere">어디갈까요? 
             <button class="d-flex aic">
@@ -181,17 +156,16 @@
             날짜를 선택하세요.
             </button>
         </div>
-
         <div class="close-svg">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox    ="0 0 22 22" fill="none" >
                 <path d="M1 21L21 1M1 1L21 21" stroke="#3F422F" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-        </button>
         </div>
-
         <button class="search-btn d-flex jic aic">검색</button>
-    </div> 
+    </div>
+    <!--// eunjeong search -->
 
+    <!-- eunjeong quick -->
     <div class="quick-menu">
         <button class="quick-btn btn-reserve">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -201,8 +175,8 @@
                 <path d="M13.4199 3V5.82609" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M13.2458 10.5493L10.3019 13.3754L8.47086 11.806" stroke="#3F422F" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            예약확인</button>
-
+            예약확인
+        </button>
         <button class="quick-btn btn-chat">
             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
                 <path d="M17.6025 16.8001C14.6904 16.8001 12.2705 14.9007 11.5459 12.3334H8.45605C4.9834 12.3334 2.16699 15.0317 2.16699 18.3588V18.9614C2.16699 22.2885 4.9834 24.9868 8.45605 24.9868L6.8291 29.8334L14.54 24.9868H16.8779C20.3506 24.9868 23.167 22.2885 23.167 18.9614V18.8304L19.9268 16.787H17.6025V16.8001Z" stroke="#3F422F" stroke-width="1.56" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
@@ -211,8 +185,8 @@
                 <path d="M20.0898 8.99613C20.0898 7.95156 20.9685 7.11047 22.0598 7.11047C23.151 7.11047 24.0297 7.95156 24.0297 8.99613C24.0297 10.0407 23.151 10.8818 22.0598 10.8818V12.0213" stroke="#3F422F" stroke-width="1.56" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M22.127 15.345C22.6102 15.345 23.002 14.9532 23.002 14.47C23.002 13.9867 22.6102 13.595 22.127 13.595C21.6437 13.595 21.252 13.9867 21.252 14.47C21.252 14.9532 21.6437 15.345 22.127 15.345Z" fill="#3F422F"/>
             </svg>
-            고객센터</button>
-
+            고객센터
+        </button>
         <button class="quick-btn btn-log">
             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
                 <path d="M12.8739 22.4333V28.6102" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -220,15 +194,17 @@
                 <path d="M21.9261 22.4333V28.6102" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M21.2608 9.86059C21.2608 11.9968 19.513 13.7212 17.3478 13.7212C15.1956 13.7212 13.4348 11.9968 13.4348 9.86059C13.4348 7.7244 15.1826 6 17.3478 6C19.5 6 21.2608 7.7244 21.2608 9.86059Z" stroke="#3F422F" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
             </svg>
-            로그인</button>
-
+            로그인
+        </button>
         <button class="quick-btn btn-top">
             <svg xmlns="http://www.w3.org/2000/svg" width="34" height="34" viewBox="0 0 34 34" fill="none">
                 <path d="M7 22L17.0186 12" stroke="#fff" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
                 <path d="M17.0186 12L27.0001 22" stroke="#fff" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
             </svg>
-            TOP</button>
-    </div>     
+            TOP
+        </button>
+    </div>
+    <!--// eunjeong quick -->    
 
 
 
