--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <header id="hd" class="d-flex">
         <div class="container_full d-flex jcb aic">
             <h1 class="order-1"><a href=""><img src="./img/logo/logo.svg" alt=""></a></h1>
-            <button class="d-lg-none">햄버거</button>
+            <button class="d-lg-none">햄버거</button> 
             <ul id="gnb" class="d-none d-lg-flex order-0 gap-3">
                 <li><a href="" class="text-nowrap">예약하기</a></li>
                 <li><a href="" class="text-nowrap">오직여기</a></li>
@@ -587,13 +587,12 @@
 
     <!-- cha mdbanner -->
     <div class="mdbanner">
-        <div class="mdb_box">
+        <div class="mdb_box point_txt">
             <p>소슬 유튜브 구독하고 1,000포인트 받아가세요!</p>
-            <button>소솔 유튜브 바로가기</button>
+            <button>소슬 유튜브 바로가기</button>
         </div>
     </div>
-    <div class="more">
-        <ul class="more_container">
+    <div class="more container">
             <h1>가고 싶은 캠핑장소를 찾아보세요!</h1>
             <div class="more_area">
                 <div id=when class="more_box">
@@ -623,20 +622,33 @@
 
     <!-- cha notice -->
     <div class="notice">
-        <ul class="notice_box">
-            <li>[공지사항] <a href="">이벤트 내용을 입력하세요.</a></li>
-            <li id="btm_icon"><a href=""><svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
-                <path d="M17.5 27.5L25 22.5" stroke="#3F422F" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
-                <path d="M25 22.5L32.5 27.5" stroke="#3F422F" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
-            </svg></a>
-            </li>
-        </ul>
+        <div class="swiper notice_swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    [공지사항] <a href="">이벤트 내용을 입력하세요.</a>
+                </div>
+                <div class="swiper-slide">
+                    [공지사항] <a href="">새로운 기능이 업데이트되었습니다.</a>
+                </div>
+                <div class="swiper-slide">
+                    [공지사항] <a href="">서버 점검 일정 안내</a>
+                </div>
+            </div>
+        </div>
+        <div id="btm_icon">
+            <a>
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 50 50" fill="none">
+                    <path d="M17.5 27.5L25 22.5" stroke="#3F422F" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
+                    <path d="M25 22.5L32.5 27.5" stroke="#3F422F" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round"/>
+                </svg>
+            </a>
+        </div>
     </div>
     <!-- cha notice -->
 
     <!-- cha footer -->
     <footer class="footer">
-        <div class="ft_container">
+        <div class="container">
             <div class="btm_info_box">
                 <div class="btm_menu">
                     <div class="btm_menu_box">
@@ -660,7 +672,7 @@
                             <li id="ytube">
                                 <a href="">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-                                        <path d="M32.5468 11.0104C31.972 8.63957 30.8998 7.73124 28.9267 7.3999C27.7937 7.2228 22.3331 7 18 7C13.6669 7.00571 8.20634 7.22851 7.07332 7.40561C5.10022 7.73124 4.028 8.64529 3.45873 11.0104C3.26529 11.7988 3 16.1576 3 17.82V18.1857C3 19.8481 3.26529 24.2012 3.45873 24.9953C4.028 27.3604 5.10022 28.2745 7.07332 28.6001C8.20634 28.7772 13.6724 28.9943 18.0111 28.9943L17.9889 29C22.3276 29 27.7881 28.7772 28.9267 28.6001C30.8998 28.2745 31.972 27.3604 32.5468 24.9953C32.7347 24.2012 33 19.8481 33 18.1857V17.82C33 16.1576 32.7347 11.7988 32.5468 11.0104ZM14.402 21.9733V14.0267L21.5925 17.9115L14.402 21.9733Z" fill="#DDDDDD"/>
+                                        <path d="M32.5468 11.0104C31.972 8.63957 30.8998 7.73124 28.9267 7.3999C27.7937 7.2228 22.3331 7 18 7C13.6669 7.00571 8.20634 7.22851 7.07332 7.40561C5.10022 7.73124 4.028 8.64529 3.45873 11.0104C3.26529 11.7988 3 16.1576 3 17.82V18.1857C3 19.8481 3.26529 24.2012 3.45873 24.9953C4.028 27.3604 5.10022 28.2745 7.07332 28.6001C8.20634 28.7772 13.6724 28.9943 18.0111 28.9943L17.9889 29C22.3276 29 27.7881 28.7772 28.9267 28.6001C30.8998 28.2745 31.972 27.3604 32.5468 24.9953C32.7347 24.2012 33 19.8481 33 18.1857V17.82C33 16.1576 32.7347 11.7988 32.5468 11.0104ZM14.402 21.9733V14.0267L21.5925 17.9115L14.402 21.9733Z" fill="#a8abac"/>
                                     </svg>
                                 </a>
                             </li>
@@ -668,7 +680,7 @@
                                 <a href="">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="26" viewBox="0 0 32 26" fill="none">
                                         <path d="M24.8033 10.2451C24.129 10.2451 23.5758 10.7876 23.5758 11.4615C23.5758 12.1296 24.129 12.6721 24.8033 12.6721C25.4833 12.6721 26.0308 12.1296 26.0308 11.4615C26.025 10.7876 25.4775 10.2451 24.8033 10.2451Z" fill="#DDDDDD"/>
-                                        <path d="M26.267 0H4.92722C2.20716 0 0 2.19855 0 4.89963V16.5205C0 19.2216 2.2014 21.4202 4.92722 21.4202H12.2806L14.7874 25.4632C14.7874 25.4632 14.8105 25.5146 14.8681 25.5774C15.018 25.8287 15.2888 26 15.6 26C15.9112 26 16.1763 25.8287 16.3261 25.5831C16.3895 25.5089 16.4126 25.4632 16.4126 25.4632L18.9194 21.4202H26.2728C28.9928 21.4202 31.2 19.2273 31.2 16.5205V4.89963C31.1942 2.19855 28.9871 0 26.267 0ZM6.93269 14.3448C5.78013 14.3448 5.32486 13.5282 5.32486 13.5282V14.145H3.39431V6.26444H5.30181V9.26817C6.07403 8.5201 6.92693 8.5201 6.92693 8.5201C9.51444 8.5201 9.61817 11.3982 9.61817 11.3982C9.61817 14.242 6.93269 14.3448 6.93269 14.3448ZM12.9433 14.145H11.0992V9.47946C11.0992 7.8691 10.229 7.90907 10.229 7.90907V6.0817C13.0183 6.0817 12.9376 9.04546 12.9376 9.04546V14.145H12.9433ZM17.4441 14.3448C14.1881 14.3448 14.2861 11.461 14.2861 11.461C14.2861 8.54294 17.4441 8.54294 17.4441 8.54294C20.7808 8.54294 20.6713 11.461 20.6713 11.461C20.6713 14.3391 17.4441 14.3448 17.4441 14.3448ZM27.7999 14.0764C27.7999 17.063 25.0107 17.0288 25.0107 17.0288H24.2673V15.3556H24.7283C26.0826 15.3556 25.9443 13.9736 25.9443 13.9736V13.5339C25.3507 14.2991 24.2673 14.2535 24.2673 14.2535C21.6106 14.2535 21.6395 11.4439 21.6395 11.4439C21.6395 8.42873 24.3422 8.54865 24.3422 8.54865C25.3968 8.54865 25.9443 9.26817 25.9443 9.26817V8.73139H27.7999V14.0764Z" fill="#DDDDDD"/>
+                                        <path d="M26.267 0H4.92722C2.20716 0 0 2.19855 0 4.89963V16.5205C0 19.2216 2.2014 21.4202 4.92722 21.4202H12.2806L14.7874 25.4632C14.7874 25.4632 14.8105 25.5146 14.8681 25.5774C15.018 25.8287 15.2888 26 15.6 26C15.9112 26 16.1763 25.8287 16.3261 25.5831C16.3895 25.5089 16.4126 25.4632 16.4126 25.4632L18.9194 21.4202H26.2728C28.9928 21.4202 31.2 19.2273 31.2 16.5205V4.89963C31.1942 2.19855 28.9871 0 26.267 0ZM6.93269 14.3448C5.78013 14.3448 5.32486 13.5282 5.32486 13.5282V14.145H3.39431V6.26444H5.30181V9.26817C6.07403 8.5201 6.92693 8.5201 6.92693 8.5201C9.51444 8.5201 9.61817 11.3982 9.61817 11.3982C9.61817 14.242 6.93269 14.3448 6.93269 14.3448ZM12.9433 14.145H11.0992V9.47946C11.0992 7.8691 10.229 7.90907 10.229 7.90907V6.0817C13.0183 6.0817 12.9376 9.04546 12.9376 9.04546V14.145H12.9433ZM17.4441 14.3448C14.1881 14.3448 14.2861 11.461 14.2861 11.461C14.2861 8.54294 17.4441 8.54294 17.4441 8.54294C20.7808 8.54294 20.6713 11.461 20.6713 11.461C20.6713 14.3391 17.4441 14.3448 17.4441 14.3448ZM27.7999 14.0764C27.7999 17.063 25.0107 17.0288 25.0107 17.0288H24.2673V15.3556H24.7283C26.0826 15.3556 25.9443 13.9736 25.9443 13.9736V13.5339C25.3507 14.2991 24.2673 14.2535 24.2673 14.2535C21.6106 14.2535 21.6395 11.4439 21.6395 11.4439C21.6395 8.42873 24.3422 8.54865 24.3422 8.54865C25.3968 8.54865 25.9443 9.26817 25.9443 9.26817V8.73139H27.7999V14.0764Z" fill="#a8abac"/>
                                         <path d="M6.50617 10.2451C5.82615 10.2451 5.27869 10.7876 5.27869 11.4615C5.27869 12.1296 5.82615 12.6721 6.50617 12.6721C7.18618 12.6721 7.73366 12.1296 7.73366 11.4615C7.73366 10.7876 7.18618 10.2451 6.50617 10.2451Z" fill="#DDDDDD"/>
                                         <path d="M17.444 10.2451C16.764 10.2451 16.2166 10.7876 16.2166 11.4615C16.2166 12.1296 16.764 12.6721 17.444 12.6721C18.1241 12.6721 18.6715 12.1296 18.6715 11.4615C18.6715 10.7876 18.1241 10.2451 17.444 10.2451Z" fill="#DDDDDD"/>
                                     </svg>
@@ -677,8 +689,8 @@
                             <li id="insta">
                                 <a href="">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26" fill="none">
-                                        <path d="M18.4911 0H7.50339C3.35751 0 0 3.35822 0 7.50498V18.495C0 22.6418 3.35751 26 7.50339 26H18.4966C22.6425 26 26 22.6418 26 18.495V7.50498C25.9945 3.35822 22.637 0 18.4911 0ZM23.6018 18.688C23.6018 21.4397 21.369 23.673 18.6179 23.673H7.37107C4.62001 23.673 2.38719 21.4397 2.38719 18.688V7.43881C2.38719 4.68717 4.62001 2.45387 7.37107 2.45387H18.6179C21.369 2.45387 23.6018 4.68717 23.6018 7.43881V18.688Z" fill="#DDDDDD"/>
-                                        <path d="M12.9947 6.31934C9.26776 6.31934 6.25208 9.34118 6.25208 13.0689C6.25208 16.791 9.26776 19.8129 12.9947 19.8129C16.7215 19.8129 19.7427 16.791 19.7427 13.0689C19.7427 9.34118 16.7215 6.31934 12.9947 6.31934ZM12.9947 17.4417C10.5799 17.4417 8.62273 15.4841 8.62273 13.0689C8.62273 10.6536 10.5799 8.69601 12.9947 8.69601C15.4094 8.69601 17.3666 10.6536 17.3666 13.0689C17.3721 15.4841 15.4149 17.4417 12.9947 17.4417Z" fill="#DDDDDD"/>
+                                        <path d="M18.4911 0H7.50339C3.35751 0 0 3.35822 0 7.50498V18.495C0 22.6418 3.35751 26 7.50339 26H18.4966C22.6425 26 26 22.6418 26 18.495V7.50498C25.9945 3.35822 22.637 0 18.4911 0ZM23.6018 18.688C23.6018 21.4397 21.369 23.673 18.6179 23.673H7.37107C4.62001 23.673 2.38719 21.4397 2.38719 18.688V7.43881C2.38719 4.68717 4.62001 2.45387 7.37107 2.45387H18.6179C21.369 2.45387 23.6018 4.68717 23.6018 7.43881V18.688Z" fill="#a8abac"/>
+                                        <path d="M12.9947 6.31934C9.26776 6.31934 6.25208 9.34118 6.25208 13.0689C6.25208 16.791 9.26776 19.8129 12.9947 19.8129C16.7215 19.8129 19.7427 16.791 19.7427 13.0689C19.7427 9.34118 16.7215 6.31934 12.9947 6.31934ZM12.9947 17.4417C10.5799 17.4417 8.62273 15.4841 8.62273 13.0689C8.62273 10.6536 10.5799 8.69601 12.9947 8.69601C15.4094 8.69601 17.3666 10.6536 17.3666 13.0689C17.3721 15.4841 15.4149 17.4417 12.9947 17.4417Z" fill="#a8abac"/>
                                         <path d="M19.9687 4.48828C19.1031 4.48828 18.3975 5.1886 18.3975 6.05986C18.3975 6.93112 19.1031 7.63144 19.9687 7.63144C20.8398 7.63144 21.54 6.93112 21.54 6.05986C21.54 5.19411 20.8398 4.48828 19.9687 4.48828Z" fill="#DDDDDD"/>
                                     </svg>
                                 </a>
@@ -756,6 +768,19 @@
     <!-- //cha footer -->
 
 <script>
+    const noticeSwiper = new Swiper(".notice_swiper", {
+        direction: "vertical", // 위로 스크롤
+        loop: true, // 무한 반복
+        autoplay: {
+            delay: 5000, // 2초마다 자동 스크롤
+            disableOnInteraction: false, // 사용자 조작 후에도 계속 자동 스크롤
+        },
+        speed: 500, // 부드러운 이동 효과 (0.5초)
+    });
+        document.getElementById("btm_icon").addEventListener("click", function () {
+        noticeSwiper.slideNext(); // 다음 슬라이드로 이동
+    });
+
     const swiperCon = new Swiper(".conSwiper1", {
         slidesPerView: "auto",
         centeredSlides: true, 
