예나꺼추가

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-- 커스터마이징 -->
     <link rel="" type="" href="">
-    <link rel="stylesheet" href="css/same.min.css">
+    <link rel="stylesheet" href="css/same.css">
 
     <!-- 팀원들의 스타일 -->
     <link rel="stylesheet" href="css/yena.min.css">
@@ -382,7 +382,7 @@
 
     <!-- yena hotspot -->
     <div class="hotspot p100">
-        <div class="container">
+        <div class="container ">
             <div class="main_tit">인기스팟</div>
             <section class="swiper conSwiper1">
                 <div class="hotplace_card_box swiper-wrapper d-flex">
@@ -468,7 +468,7 @@
    
     <!-- yena magazin -->
     <div class="magazin p100 gray5_bg">
-        <div class="container d-flex justify-content-between align-items-center">
+        <div class="container d-lg-flex flex-lg-row justify-content-between align-items-center">
             <div class="swiper-container gallery-top">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide"><div class="swiper-slide-container"><img src="./img/image/magazin_short.jpg"></div></div>
