--- a/index.html
+++ b/index.html
@@ -117,9 +117,8 @@
     <!-- eunjeong video -->
     <div class="video-container">
         <div class="video-bg"> 
-            <video autoplay muted loop>
+            <video autoplay muted loop data-src-desktop="./video/main_video.mp4" data-src-mobile="./video/mob_video.mp4">
                 <source src="./video/main_video.mp4" type="video/mp4">
-                <!-- Your browser does not support the video tag. -->
             </video>
         </div>
         <div class="video-icon aic">
